18724
(using latest 2.11.0-SNAPSHOT)
```scala
scala> val sym = typeOf[String].typeSymbol
sym: $r.intp.global.Symbol = class String

scala> sym.getter
<console>:39: error: ambiguous reference to overloaded definition,
both method getter in class Symbol of type (base: $r.intp.global.Symbol)$r.intp.global.Symbol
and  method getter in class SymbolContextApiImpl of type => $r.intp.global.Symbol
match expected type ?
              sym.getter
                  ^
```
